--- a/manifest.json
+++ b/manifest.json
@@ -24,8 +24,8 @@
       "banner": ""
     },
     "stb": {
-      "interstitial": "tpaxe6cw",
-      "rewarded": "5m0eb2dt"
+      "interstitial": "648yqvps",
+      "rewarded": "4t273e08"
     },
     "msite": {
       "interstitial": "g2k49cuf",
